--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -3,12 +3,12 @@
 
 
 @import "components/mainMusic";
-@import "components/mainEven";
+@import "components/main.mainEven";
 @import "components/main";
 @import "components/footer";
 @import "components/mainBio"; // BIO
 @import "components/mainDisco";
-
+@import "components/mainEven";
 
 @import "objects/mainQuotes";
 @import "objects/mainInfo";
