--- a/source/scss/base/_root.scss
+++ b/source/scss/base/_root.scss
@@ -5,7 +5,7 @@
 
 body{
 	font-size: 1.2em;
-	font-family:Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
+	font-family: 'Roboto', Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
 	//font-family: 'Segoe UI,Frutiger', 'Frutiger Linotype', 'Dejavu Sans' , 'Helvetica Neue',Arial,sans-serif;
 }
 a{
