--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -9,6 +9,7 @@
 @import "components/mainBio"; // BIO
 @import "components/mainDisco";
 @import "components/mainEven";
+@import "components/mainContact";
 
 @import "objects/mainQuotes";
 @import "objects/mainInfo";
@@ -27,7 +28,3 @@
 @import "base/root";
 
 @import "settings/fonts";
-
-
-
-
