--- a/source/scss/trumps/_icons.scss
+++ b/source/scss/trumps/_icons.scss
@@ -3,6 +3,16 @@
     Artiste
         icons - Trumps
 */
+/*.cont__labDeco::after{
+   content: '';
+    position: absolute;
+    margin-top: -0.24em;
+    margin-left: 0.5%;
+    color: #7EC9CD;
+    background-color: transparent;
+    font-family: 'Glyphs';
+    font-size: 2em;
+}*/
 
 .yt::before {
     content: "";
