--- a/source/scss/trumps/fonds.scss
+++ b/source/scss/trumps/fonds.scss
@@ -3,8 +3,8 @@
  	Artiste
 		bio - components
 */
-.bio, .disco, .accueil{
-	background: url(../img/lowFull.jpg) no-repeat center; 
+.bio, .disco, .accueil, .even, .cont{
+	background: url(../img/lowFull.jpg) no-repeat center;
   	-webkit-background-size: cover; /* pour anciens Chrome et Safari */
   	background-size: cover; /* version standardisée */
 	color: white;
