--- a/source/scss/base/_root.scss
+++ b/source/scss/base/_root.scss
@@ -4,15 +4,30 @@
 		ROOT  - base*/
 
 body{
-	font-size: 1.2em;
-	font-family: 'Roboto', Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
+	font-size: 1.3em;
+	font-family: 'Titillium Web', 'Dosis', serif;
 	//font-family: 'Segoe UI,Frutiger', 'Frutiger Linotype', 'Dejavu Sans' , 'Helvetica Neue',Arial,sans-serif;
+}
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(https://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr9INifKjd1RJ3NxxEi9Cy2w.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(https://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr4-67659ICLY8bMrYhtePPA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 a{
 	text-decoration: none;
 }
 p{
-	line-height: 1.5;
+	line-height: 1.7;
 }
 .hidden{
 	text-indent: -10000px;
@@ -20,7 +35,7 @@ p{
 
 .accueil{
 	background-color: black;
-	color: white;	
+	color: white;
 }
 .active{
 	background-color:#7EC9CD ;
