--- a/source/scss/components/_main.mainEven.scss
+++ b/source/scss/components/_main.mainEven.scss
@@ -5,7 +5,7 @@
 */
 
 
-.mainEven{ // HOVER IMAGE EN GRIS??? 
+.mainEven{ // HOVER IMAGE EN GRIS???
 	height: 27.7em;
 	&__G{
 		width: 50%;
@@ -14,9 +14,9 @@
 	    background-position: 37px -16px;
 		-webkit-clip-path: polygon(98% 52%, 0 0, 0 100%);
         clip-path: polygon(98% 50%, 0% 0%, 0% 100%);
-	//background-image: url(../img/every.jpg); 
+	//background-image: url(../img/every.jpg);
  	//transition: 0.4s cubic-bezier(1, -1, 0, 2);
-  //clip-path: polygon(50% 5%, 0% 100%, 100% 100%); 
+  //clip-path: polygon(50% 5%, 0% 100%, 100% 100%);
 	}
 	&__D{
 		width: 50%;
@@ -35,9 +35,8 @@
         clip-path: polygon(100% 50%, 0% -14%, 1% 100%);
         transform: rotate(90deg);
         float: right;*/
-	}	
+	}
 }
-
 .mainEvenG{
 	&__title{
 		@include boxStyles(2em, 22% );
@@ -46,7 +45,7 @@
 		left: 28%;
 	}
 	&__date{
-		@include boxStyles(1.7em, 29% );
+		@include boxStyles(1.7em, 30% );
 		position: relative;
 		top: 6em;
 		left: 24%;
@@ -65,4 +64,70 @@
 		top: 6em;
 		left:47%;
 	}
+}
+
+@media (max-width: 1489px) {
+	.mainEvenG{
+		&__title{
+			min-width: 4em;
+		}
+		&__date{
+			min-width: 7em;
+		}
+	}
+		.mainEvenD{
+			&__title{
+				min-width: 9em;
+			}
+			&__date{
+				min-width: 7em;
+			}
+	}
+}
+
+
+@media (max-width: 1221px){
+	.test{
+		top: 69em;
+	}
+}
+@media (max-width: 1080px){
+	.mainEven{
+		&__D{
+			right: unset;
+			top:   -12em;
+			width: unset;
+		}
+		&__G{
+			width: 100%;
+		}
+	}
+	.mainEvenD{
+		&__title{
+		width: 3%;
+		}
+		&__date{
+			width: 24.7%;
+		}
+	}
+	.mainEvenG{
+		&__title{
+			left: 24%;
+		}
+	}
+	.mainMusic{
+		width: 101%;
+		-webkit-clip-path: polygon(98% 52%, 0 0, 0 100%);
+		clip-path: polygon(98% 50%, 0% 0%, 0% 100%);
+		&__title{
+			top: 5em;
+			left: 30%;
+			width: 21%;
+		}
+	}
+	.test{
+		position: relative;
+		top: 1.2em;
+	}
+
 }
