--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -6,8 +6,7 @@
 
 .mainHeader{
 	background: url(../img/710193.jpg) no-repeat center;
-    /* background-position: 46% 50%; */
     min-height: 41em;
-    background-size: 119%;
+    background-size:74em;
 
 }
