--- a/source/scss/components/_mainDisco.scss
+++ b/source/scss/components/_mainDisco.scss
@@ -8,6 +8,16 @@
 .mainDisco{
 	&__video{
 		margin: 3em auto;
-		width: 50%;
+		width: 55%;
 	}
+}
+
+@media (max-width: 1080px) {
+	.mainDisco{
+		&__video{
+			width: 71%;
+		}
+	}
+
+
 }
