--- a/source/scss/settings/_fonts.scss
+++ b/source/scss/settings/_fonts.scss
@@ -12,7 +12,7 @@
   src: url("../font/fontawesome/fontawesome-webfont.eot");
   src: url("../font/fontawesome/fontawesome-webfont.eot?#iefix") format("embedded-opentype"),
   	   url("../font/fontawesome/fontawesome-webfont.woff2") format("woff2"),
-       url("../font/fontawesome/fontawesome-webfont.woff") format("woff"), 
+       url("../font/fontawesome/fontawesome-webfont.woff") format("woff"),
        url("../font/fontawesome/fontafontawesome-webfont.ttf") format("truetype"),
        url("../font/fontawesome/fontawesome-webfont.svg#fontawesomeregular") format("svg");
   font-weight: normal;
@@ -21,13 +21,23 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url("../font/fontawesome/fontawesome-webfont.eot");
-  src: url("../font/fontawesome/fontawesome-webfont.eot?#iefix") format("embedded-opentype"),
-       url("../font/fontawesome/fontawesome-webfont.woff2") format("woff2"),
-       url("../font/fontawesome/fontawesome-webfont.woff") format("woff"), 
-       url("../font/fontawesome/fontafontawesome-webfont.ttf") format("truetype"),
-       url("../font/fontawesome/fontawesome-webfont.svg#fontawesomeregular") format("svg");
+  src: url("../font/roboto/Roboto-Regular-webfont.eot");
+  src: url("../font/roboto/Roboto-Regular-webfont.eot?#iefix") format("embedded-opentype"),
+       url("../font/roboto/Roboto-Regular-webfont.woff2") format("woff2"),
+       url("../font/roboto/Roboto-Regular-webfont.woff") format("woff"),
+       url("../font/roboto/Roboto-Regular-webfont.ttf") format("truetype"),
+       url("../font/roboto/Roboto-Regular-webfont.svg") format("svg");
   font-weight: normal;
   font-style: normal;
    }
-
+   @font-face {
+     font-family: 'Dosis';
+     src: url("../Dosis-ExtraLight.eot");
+     src: url("../Dosis-ExtraLight.eot?#iefix") format("embedded-opentype"),
+          url("../Dosis-ExtraLight.woff2") format("woff2"),
+          url("../Dosis-ExtraLight.woff") format("woff"),
+          url("../Dosis-ExtraLight.ttf") format("truetype"),
+          url("../Dosis-ExtraLight.svg") format("svg");
+     font-weight: normal;
+     font-style: normal;
+      }
