--- a/source/scss/components/_mainDisco.scss
+++ b/source/scss/components/_mainDisco.scss
@@ -10,6 +10,9 @@
 		margin: 3em auto;
 		width: 55%;
 	}
+	&__player{
+
+	}
 }
 
 @media (max-width: 1080px) {
@@ -20,4 +23,8 @@
 	}
 
 
-}
+} /* REPONSIVE DE L IFRAME */
+.wrapper         {width:80%;height:100%;margin:0 auto;background:#CCC}
+.h_iframe        {position:relative;}
+.h_iframe .ratio {display:block;width:100%;height:auto;}
+.h_iframe iframe {position:absolute;top:0;left:0;width:100%; height:100%;}
