--- a/source/scss/components/_mainEven.scss
+++ b/source/scss/components/_mainEven.scss
@@ -1,19 +1,42 @@
 .mainEven{
 
 }
-
-
+.day{
+	padding-right: 0.3em;
+}
+.years{
+	padding-left: 0.2em;
+}
+.hours{
+	font-size: 0.9em;
+}
 .even{
-	&__addr, &__price, &__num, &__date{
-		line-height: 3;
+	&__price{
+		padding-bottom: 0.1em;
+	}
+	&__feat{
+		font-size: 1.2em;
+		padding-bottom: 0.8em;
+	}
+	&__date{
+		float: left;
+		text-align: right;
+		padding-right: 1em;
+		margin-left: -4.5em;
+		font-size: 1.4em;
+		color: #7EC9CD;
+		margin-top: -4.9em;
+	}
+	&__addr, &__price, &__num{
+		line-height: 1.5;
+		font-size: 1em;
 	}
 	&__footer{
-		margin-top: 42em;
+		margin-top: 37em;
 	}
 	&__title1{
-		font-size: 1.3em;
+		font-size: 2em;
 		margin-bottom: 1.2em;
-		margin-left: 21%;
 	}
 	/*&__date, &__price{
 		margin: 0.5em 0 0.5em 10.5%;
@@ -23,13 +46,18 @@
 	}*/
 	&--d{
 		float: right;
-		margin-top: 4em;
-		margin-right: 8%;
+		margin-top: -1.5em;
+		margin-right: 2%;
 		width: 35%;
+		padding-left: 1em;
+		border-left: 2px solid #7EC9CD;
 	}
 	&--g{
+		border-left: 2px solid #7EC9CD;
+		padding-left: 1em;
 		width: 34%;
 		margin: 5em 0 5em 17%;
+		z-index: 10;
 	}
 	&--photo-d{
 		z-index: 1;
@@ -37,26 +65,28 @@
 		width: 50%;
 		float: right;
 		margin-top: -20em;
-			background: url(../img/night.jpg);
-		 // background-size: 70%;
-			background-position: -15px -8px;
+			background: url(../img/even.jpg);
+		 background-size: 100%;
+
+			background-position: 0em 0em;
 		-webkit-clip-path: polygon(100% 0%, 0% 9%, 0% 70%, 100% 85%);
-				clip-path: polygon(100% 0%, 0% 9%, 0% 70%, 100% 85%);
+				clip-path: url(#clipEvenD);
+
 
 	}
 	&--photo-g{
 
-
+					margin-top: -6em;
 						z-index: 1;
-						width: 50%;
+						width: 52%;
 						float: left;
 							height: 25em;
 							//position: absolute;
-							background: url(../img/io.jpg);
-							background-size: 70%;
-							background-position: 95px -16px;
+							background: url(../img/even2.jpg);
+							background-size: 100%;
+							background-position: 0em -4em;
 						-webkit-clip-path: polygon(0% 0%, 96% 10%, 95% 70%, 0% 85%);
-								clip-path: polygon(0% 0%, 96% 10%, 95% 70%, 0% 85%);
+								clip-path: url(#clipEvenG);
 	}
 }
 .evenFormlink{
@@ -66,20 +96,28 @@ width: 100%;
 color: black;
 font-size: 1.5em;
 -webkit-clip-path: polygon(50% 27%, 100% 50%, 50% 79%, 0% 53%);
-clip-path:polygon(50% 27%, 100% 50%, 50% 79%, 0% 53%);
-height: 11em;
+clip-path: url(#clipForm);
+height: 8em;
 position: relative;
+top: -2em;
+}
+.evenFormlink:hover{
+	color: #7EC9CD;
+	background-color: rgba(0,0,0,0.66);
 }
 
 .posEven{
 	position: absolute;
-	top: 5em;
-right: 32%;
+	top: 3.7em;
+right: 34%;
+}
+
+@media (max-width:1271px) {
+	.even--g{
+		margin-left: 13%;
+	}
 }
 @media (max-width: 1080px) {
-	.evenFormlink{
-		margin: -3em 0;
-	}
 	.posEven{
 		right: 21%;
 	}
@@ -89,13 +127,85 @@ right: 32%;
 		}
 
 }
+@media (max-width: 870px) {
+		.even--d{
+			float: unset;
 
-@media (max-width: 1005px) {
-	.even--g{
-		margin-left: 11%;
+		}
+		.even--g, .even--d{
+			position: relative;
+			left: 30%;
+			top: 0.5em;
+			 width: 14em;
+			padding: 0.5em;
+			background-color: rgba(0,0,0,0.75);
+		}
+		.even--d{
+			top: -20.5em;
+			left: 38%;
+		}
+		.even--photo-d{
+			/*filter: grayscale(75%);
+     -webkit-filter:grayscale(75%);
+     -moz-filter:grayscale(75%);
+     -ms-filter:grayscale(75%);
+     -o-filter:grayscale(75%);*/
+				width: 100%;
+				margin-top: -22em;
+			}
+			.even--photo-g{
+				width: 105%;
+				margin-top: -4em;
+				float: unset;
+			}
+			.even{
+				&__date{
+					background-color: rgba(0,0,0,0.75);
+					padding: 1em 0 3.2em 0.5em;
+					margin-left: -4em;
+					margin-top: -5.9em;
+				}
+			}
+	footer{
+		margin: 0;
 	}
 }
+@media (max-width:752px) {
+	.posEven{
+		font-size: 0.8em;
+		right: 19%;
+		top: 4.7em;
+	}
+}
+@media (max-width:620px) {
+	.even--g{
+		left: 22%;
+	}
+	.even--d{
+		left: 31%;
+	}
+}
+@media (max-width:506px) {
+	.posEven{
 
+	}
+}
+@media (max-width:480px) {
+	.posEven{
+		font-size: 0.75em;
+		right: 15%;
+		top: 5.2em;
+	}
+}
+@media (max-width:340px) {
+	.posEven{
+		width: 57%;
+		text-align: center;
+		right: 21%;
+    top: 4.7em;
+	}
+}
+/*
 @media (max-width: 699px) {
 	.even--photo-d{
 		z-index: 1;
@@ -109,4 +219,4 @@ right: 32%;
 		background-color: rgba(243, 240, 240, 0.72);
 		margin: 0 auto;
 	}
-}
+}*/
