--- a/source/scss/objects/_mainInfo.scss
+++ b/source/scss/objects/_mainInfo.scss
@@ -7,7 +7,7 @@
 .mainInfo{
 	width: 40%;
 	margin: 0 auto;
-	margin-top: 7em;
+	margin-top: 5em;
 	&__plus{
 		padding: 0 0.3em;
 		color: #7EC9CD;
@@ -15,8 +15,34 @@
 		margin-left: 1%;
 		border-bottom: 2px solid #7EC9CD;
 	}
+	&__title{
+		font-size: 3em;
+    text-align: center;
+    padding-bottom: 0.5em;
+	}
 	&__plus:hover{
 		transition: .12s ease-in-out;
 		border-top: 2px solid #7EC9CD;
+	}
+}
+
+@media (max-width: 820px) {
+	.mainInfo{
+		width: 18.5em;
+		margin-top: 2.5em;
+		margin-bottom: 2em;
+	}
+
+}
+@media (max-width: 550px) {
+
+	.mainInfo{
+		width: 15.5em;
+	}
+}
+@media (max-width: 380px) {
+
+	.mainInfo{
+		width: 12em;
 	}
 }
