--- a/source/scss/objects/_menu.scss
+++ b/source/scss/objects/_menu.scss
@@ -12,16 +12,23 @@
 	&__elt{
 		//background-color: black;
 		padding: 0.2em;
+		background-color: rgba(16, 15, 15, 0.9);
 		//border-bottom: 1px solid #7EC9CD;
 		display: inline;
+		&:hover{
+			padding-bottom: unset;
+			transition: 0.2s linear;
+			border-bottom: 5px solid #7EC9CD;
+		}
 	}
 	&__list{
-		background-color: rgba(16, 15, 15, 0.65);
+
 		margin-left: 14%;
+		//width: 78%;
 		width: 100%;
-		padding: 0.2em;
+		padding: 0.4em;
 	}
-	&__list::target{
+	&__list:target{
 		transition: all 0.4s ease-out;
 	}
 	&__link{
@@ -67,10 +74,22 @@
 
 @media (max-width:1080px) {
 
-	.menu__list{
-		width: 109%;
-		padding-bottom: 0.4em;
-		    border-bottom: 1px solid #7EC9CD;
+	.menu{
+		width: 100%;
+		&__list{
+
+			padding-bottom: 0.4em;
+		}
+	}
+
+}
+
+@media (max-width:533px) {
+	.menu{
+		&__elt{
+		margin-top: 1.5em;
+		padding: 0.1em;
+		}
 	}
 
 }
