--- a/source/scss/tools/_mixin.scss
+++ b/source/scss/tools/_mixin.scss
@@ -14,19 +14,21 @@
 }
 /*
 @mixin fond(){/*
-background: rgb(14,14,14);  Old browsers 
+background: rgb(14,14,14);  Old browsers
 background: -moz-linear-gradient(top,  rgba(14,14,14,1) 0%, rgba(153,153,153,1) 100%);
-background: -webkit-linear-gradient(top,  rgba(14,14,14,1) 0%,rgba(153,153,153,1) 100%); 
-background: linear-gradient(to bottom,  rgba(14,14,14,1) 0%,rgba(153,153,153,1) 100%); 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0e0e', endColorstr='#999999',GradientType=0 ); 
-background: url(../img/lowFull.jpg) no-repeat center; 
+background: -webkit-linear-gradient(top,  rgba(14,14,14,1) 0%,rgba(153,153,153,1) 100%);
+background: linear-gradient(to bottom,  rgba(14,14,14,1) 0%,rgba(153,153,153,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0e0e', endColorstr='#999999',GradientType=0 );
+background: url(../img/lowFull.jpg) no-repeat center;
 background-size: cover;
 }*/
 
 @mixin tri(){
 	z-index: 1;
 	-webkit-clip-path: polygon(100% 0, 50% 100%, 0 0);
-	clip-path: polygon(100% 0, 50% 100%, 0 0);
+	//clip-path: polygon(100% 0, 50% 100%, 0 0);
+	//-webkit-clip-path: url(#clipTriTitle);
+	clip-path: url(#clipTriTitle);
 	background-color: black;
 	color: white;
 	height: 5em;
@@ -34,9 +36,10 @@ background-size: cover;
 }
 @mixin triTitle(){
 	position: relative;
-		left: 44%;
-		top: 1em;
-		width: 20%;
+		left: 45%;
+		//top: 0.7em;
+		top: 0.4em;
+		width: 15%;
 		font-size: 1.5em;
 }
 @mixin fondImg(){
@@ -50,6 +53,6 @@ background-size: cover;
     font-family: 'Glyphs';
     font-size: 2em;
     padding: 0.5em;
-  
+
     border: 2px solid $color;
 }
